Este commit es el proyecto del modulo 1 HTML

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Esta es mi primera pagina web!</title>
+    <title>Esta sera mi landing page personal!</title>
 </head>
 <body>
-    <p>Este es un parrafo</p>
+    <h1>Hola, me llamo Daniel Medina! :)</h1>
+    <p>Soy un Frontend Developer en proceso</p>
+    <h2>Me gusta mucho la programacion</h2>
+    <p>Estoy muy entusiasmado por el curso de becalos! , espero al finalizar pueda tener mi pagina personal como CV</p>
+    <h3>Este curso fue perfecto para mi </h3>
+    <p>Aplique porque mis areas favoritas son el desarrollo web y la inteligencia artificial.</p>
+    
+    <h4>Lenguajes de programacion</h4>
+    <section>
+        <p>Los lenguajes que me gustaria aprender seria Javascript y python!</p>
+    </section>
+
+    <div>
+        <img src="/images/python.png"  width="200px" alt="Esta es una imagen de python"/>
+        <img src="/images/Javascript.png"  width="200px" alt="Esta es una imagen de Javascript"/>
+    </div>
+
+    <h3>Te voy a ensenar un poco a como se usan las listas en html!</h3>
+
+    <ul>
+        <p>Unordered list</p>
+        <li>Item 3</li>
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ul>
+
+    <ol><p>Order list</p>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li></ol>
+
+    <a href="https://developer.mozilla.org/es/docs/Web/HTML" target="_blank">Esta es la fuente donde aprendi etiquetas en html, te la recomiendo</a>
 </body>
 </html>
