--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </header>
     <section class="home" id="home">
         <div class="home-img">
-            <img src="/images/1.jpg " alt="Esta es mi foto">
+            <img src="images/1.jpg " alt="Esta es mi foto">
         </div>
         <div class="home-content">
             <h1>Hi, It's <span>Dan</span></h1>
