Correcion ruta relativa en imagenes del repo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="#" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" title="Link a mi CV" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="/images/DanGomez.pdf" download class="btn">Hire me</a>
+            <a href="images/DanGomez.pdf" download class="btn">Hire me</a>
         </div>
     </section>
     <section class="experience" id="experience">
@@ -50,9 +50,9 @@
                     I implemented and managed servers and cloud solutions based on Synology. 
                     I administered enterprise software for ticket management, accounting modules, human resources </p>
                     <div class="skills">
-                        <img src="/images/cloud-icon.png" alt="Cloud" />
-                        <img src="/images/excel-icon.png" alt="Excel" />
-                        <img src="/images/network-icon.png" alt="Networks" />
+                        <img src="images/cloud-icon.png" alt="Cloud" />
+                        <img src="images/excel-icon.png" alt="Excel" />
+                        <img src="images/network-icon.png" alt="Networks" />
                     </div>
                 <div class="job">
                     <h3>Robert Bosch</h3>
@@ -68,9 +68,9 @@
                         Provided induction to new employees on the use of systems and equipment, improving their 
                         integration and productivity from day one. </p>
                         <div class="skills">
-                            <img src="/images/python-icon.png" alt="Python" />
-                            <img src="/images/excel-icon.png" alt="Excel" />
-                            <img src="/images/scrum-scrum.png" alt="Scrum" />
+                            <img src="images/python-icon.png" alt="Python" />
+                            <img src="images/excel-icon.png" alt="Excel" />
+                            <img src="images/scrum-scrum.png" alt="Scrum" />
                         </div>
                     <div class="job">
                         <h3>CUCEI</h3>
@@ -84,9 +84,9 @@
                             Customer Service Process Optimization: I implemented process improvements in the customer 
                             service department, resulting in reduced response time and improved customer ratings.</p>
                             <div class="skills">
-                                <img src="/images/html-css-icon.png" alt="HTML&CSS" />
-                                <img src="/images/js-icon.png" alt="JavaScript" />
-                                <img src="/images/php-icon.png" alt="PHP" />
+                                <img src="images/html-css-icon.png" alt="HTML&CSS" />
+                                <img src="images/js-icon.png" alt="JavaScript" />
+                                <img src="images/php-icon.png" alt="PHP" />
                             </div>
             </div>
             
@@ -97,18 +97,18 @@
     <section class="projects" id="projects">
         <div class="project-card">
             <a href="proyecto-starbucks.html" target="_blank">
-                <img src="/images/Starbacks.png" alt="Project 1" width="200px" height="150px">
+                <img src="images/Starbacks.png" alt="Project 1" width="200px" height="150px">
             </a>
             <h3>Starbacks</h3>
             <p>Es un clon de starbucks para un proyecto de aprender Frontend con Becalos Tech Challenge.</p>
         </div>
         <div class="project-card">
-            <img src="/images/Maglia.png" alt="Project 2" width="200px" height="150px">
+            <img src="images/Maglia.png" alt="Project 2" width="200px" height="150px">
             <h3>Maglia App</h3>
             <p>Una pagina web de gimnasio donde te permite administrar socios, suscripciones con pasarela de pagos.</p>
         </div>
         <div class="project-card">
-            <img src="/images/ComingSoon.png" alt="Project 3" width="200px" height="200px">
+            <img src="images/ComingSoon.png" alt="Project 3" width="200px" height="200px">
             <h3>FinanceApp</h3>
             <p>Es una app para controlar tus finanzas personales de manera simple y segura.</p>
         </div>
