--- a/proyecto-starbucks.html
+++ b/proyecto-starbucks.html
@@ -15,7 +15,7 @@
     <header>
         <div class="container header-container">
             <div class="logo-menu">
-                <img src="/imagesStarbacks/logo.png" alt="Starbucks Logo" class="logo">
+                <img src="imagesStarbacks/logo.png" alt="Starbucks Logo" class="logo">
                 <nav>
                     <ul>
                         <li><a href="#">MENU</a></li>
@@ -26,7 +26,7 @@
             </div>
             <div class="actions">
                 <div class="location">
-                    <img src="/imagesStarbacks/gps.png" alt="" class="location-icon">
+                    <img src="imagesStarbacks/gps.png" alt="" class="location-icon">
                     <a href="">Localizar Tienda</a>
                 </div>
                 
@@ -40,7 +40,7 @@
         <div class="content">
             <div class="card">
                 <div class="left-section">
-                <img src="/imagesStarbacks/starbucks101.png" alt="">
+                <img src="imagesStarbacks/starbucks101.png" alt="">
                 </div>
                 <div class="right-section">
                     <h2><strong>STARBUCKS  LATTE POR TI</strong></h2>
@@ -50,7 +50,7 @@
             </div>
             <div class="card1">
                 <div class="right-section">
-                    <img src="/imagesStarbacks/starbucks102.png" alt="">
+                    <img src="imagesStarbacks/starbucks102.png" alt="">
                 </div>
                 <div class="left-section">
                     <h1>CELEBREMOS CON LOS FAVORITOS DE LA TEMPORADA</h1>
@@ -59,7 +59,7 @@
             </div>
             <div class="card2">
                 <div class="left-section">
-                    <img src="/imagesStarbacks/starbucks103.png" alt="">
+                    <img src="imagesStarbacks/starbucks103.png" alt="">
                 </div>
                 <div class="right-section">
                 <h1>EL CAFE PERFECTO PARA ESTA TEMPORTADA</h1>
@@ -69,7 +69,7 @@
             </div>
             <div class="card3">
                 <div class="right-section">
-                    <img src="/imagesStarbacks/starbucks104.png" alt="">
+                    <img src="imagesStarbacks/starbucks104.png" alt="">
                 </div>
                 <div class="left-section">
                 <h1>RECOMPENSAS EN TU BEBIDA FAVORITA</h1>
@@ -79,7 +79,7 @@
             </div>
             <div class="card4">
                 <div class="left-section">
-                <img src="/imagesStarbacks/starbucks105.png" alt="">
+                <img src="imagesStarbacks/starbucks105.png" alt="">
                 </div>
                 <div class="right-section">
                     <h1>TODO Y TODOS POR EL PLANETA</h1>
